# list-flatten

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
list_flatten/: __init__.py  core.py
tests/: test_list_flatten.py
